# QCForge

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape
demo_data/: germline_variants.vcf.stats  lowqual_exome.stats  normal_WGS.stats  sample_A.stats  tumor_WGS.stats  tumor_somatic.vcf.stats
src/: cli.rs  error.rs  export.rs  main.rs  threshold.rs
src/app/: CLAUDE.md  actions.rs  mod.rs  state.rs
src/event/: key.rs  mod.rs
src/generator/: mod.rs
src/parser/: CLAUDE.md  bcftools.rs  fastqc.rs  mod.rs  samtools.rs  types.rs
src/scanner/: mod.rs
src/ui/: CLAUDE.md  layout.rs  mod.rs
src/ui/tabs/: bcftools.rs  fastqc.rs  mod.rs  overview.rs  samtools.rs  summary.rs
src/ui/widgets/: gauge.rs  mod.rs  table.rs
test_data/: variants.vcf.stats
