[package]
name = "qcforge"
version = "0.1.0"
edition = "2021"
description = "A TUI bioinformatics QC dashboard for FastQC, samtools, and bcftools"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
zip = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
futures = "0.3"
